--- a/index.html
+++ b/index.html
@@ -4,125 +4,33 @@
 	<meta charset="UTF-8">
 	<title>GoingApp</title>
 	<link rel="stylesheet" href="css/libs/bootstrap.min.css">
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous"> -->
+	<link rel="stylesheet" href="css/libs/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.0/css/bootstrapValidator.min.css">	
 	<link rel="stylesheet" href="css/libs/font-awesome.min.css">
 	<link rel="stylesheet" href="css/libs/fullcalendar.min.css">
-<!-- 	<link rel="stylesheet" href="css/libs/fullcalendar.print.css">
--->	<link rel="stylesheet" href="css/stylesheet.css">
-<meta name="viewport" content="width=device-width, initial-scale=1">	
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-UF-QLD_R087xLeUrNL4KeqRJKKOfSXw" type="text/javascript"></script>
-	<!-- <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-UF-QLD_R087xLeUrNL4KeqRJKKOfSXw">
-  </script> -->
-
+	<link rel="stylesheet" href="css/stylesheet.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">	
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-UF-QLD_R087xLeUrNL4KeqRJKKOfSXw" type="text/javascript"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
 </head>
+
 <body ng-controller="HomeViewController">
 
 	<custom-header></custom-header>
 
+	<div class="container" ng-view></div>
 
-	<div ng-controller="loadMapController">
-		<select id="dropdown" ng-model="categoryOrder">
-			<option value="0">Todos</option>
-			<option ng-repeat="category in categories" value="{{category}}">{{category}}</option>
-		</select>
-
-		<ui-gmap-google-map center='map.center' zoom='map.zoom' aria-label="Google map" pan="true">
-
-
-
-			<!-- <ui-gmap-markers models="map.markers" idKey="'id'" coords="'self'" events="map.markersEvents">
-				<ui-gmap-window show="map.window.show" coords="map.window.model" ng-cloak>
-					<div>
-						<p><img ng-src="{{image}}" alt="{{name}}" style="width: 200px; height: 150px; border-radius: 5px;"></p>
-						<p><strong>{{name}}</strong></p>
-						<p>{{address}}</p>
-						<p><a ng-href="{{website}}">Website</a></p>
-						<p><span class="glyphicon glyphicon-plus"> </span><a href="#/"> Profile</a></p>
-					</div>
-				</ui-gmap-window>
-			</ui-gmap-markers> -->
-			
-
-
-			<ui-gmap-marker ng-repeat="marker in locations | filter:categoryOrder" coords="{latitude: marker.latitude, longitude: marker.longitude}" options="marker.options" events="map.markersEvents" idkey="marker.id" >
-				<ui-gmap-window>
-					<div>
-						<p><img ng-src="{{marker.image}}" alt="{{marker.name}}" style="width: 200px; height: 150px; border-radius: 5px;"></p>
-						<p><strong>{{marker.name}}</strong></p>
-						<p>{{marker.address}}</p>
-						<p><a ng-href="{{marker.website}}">Website</a></p>
-						<p><span class="glyphicon glyphicon-plus"> </span><a href="#/"> Profile</a></p>
-					</div>
-				</ui-gmap-window>
-			</ui-gmap-marker>
-		</ui-gmap-google-map>
-
-
-		<!-- <ul>
-			<li ng-repeat="location in locations | filter:categoryOrder" ng-class="{selected: location == map.window.model}" ng-click="map.window.model = location">
-				<p>{{location.name}}</p>
-			</li>
-		</ul> -->
-
-		<ul class="list-inline">
-			<li class="location-list" ng-repeat="location in locations | filter:categoryOrder">
-				<p>{{location.name}}</p>
-			</li>
-		</ul>
-		
-	</div>
-
-
-
-	<section id="directives-calendar" ng-controller="CalendarCtrl">
-		<div class="well">
-			<div class="col-xs-3">
-				<div>
-					<ul>
-						<li ng-repeat="e in events" type="info">
-							<b> {{e.title}} </b>
-							<p>{{e.start | date:"dd MMM"}} - {{e.end | date:"dd MMM"}}</p>
-							<p>{{e.timetable}}</p>
-							<p>{{e.price}}</p>
-						</li>
-					</ul>
-
-					<!-- <ul class="alert-success calAlert" ng-show="alertMessage != undefined && alertMessage != ''"><li>{{alertMessage}}</li></ul> -->
-
-				</div>
-			</div>
-			<div class="col-xs-9" style="background-color: #EEE;">
-				<tabset>
-					<tab active select="renderCalendar('myCalendar');">
-						<tab-heading>
-							<i class="glyphicon glyphicon-bell"></i> Calendario de Eventos
-						</tab-heading>
-						<div class="alert-success calAlert" ng-show="alertMessage != undefined && alertMessage != ''">
-							<h5>{{alertMessage}}</h5>
-						</div>
-						<div class="calendar" ng-model="eventSources" calendar="myCalendar" ui-calendar="uiConfig.calendar" ng-if="eventSources"></div>
-
-					</tab>
-				</tabset>
-			</div>
-			<div class="clearfix"></div>
-		</div>
-	</section>
+	<custom-footer></custom-footer>
 	
-
-
-
-
-
-
 
 
 	<script src="js/libs/lodash.js"></script>
 	<script src="js/libs/angular.min.js"></script>
 	<script src='js/libs/angular-simple-logger.js'></script>
-	<!-- <script src="http://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script> -->
 	<script src='js/libs/angular-google-maps.min.js'></script>
 	<script src="js/libs/angular-route.min.js"></script>
+	<script src="js/libs/angular-cookies.min.js"></script>
 	<script src="js/libs/jquery-2.2.4.min.js"></script>
 	<!-- <script src="js/libs/lodash.underscore.min.js"></script> -->
 	<script src="js/libs/moment.min.js"></script>
@@ -131,14 +39,16 @@
 	<script src="js/libs/calendar.js"></script>
 	<script src="js/libs/fullcalendar.min.js"></script>
 	<script src="js/libs/gcal.js"></script>
-	<script src="js/libs/ui-bootstrap-tpls-2.0.0.min.js"></script>
 	<script src="js/libs/bootstrap.min.js"></script>
+	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script> -->
+	<script src="js/libs/ui-bootstrap-tpls-2.0.0.min.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.4.5/js/bootstrapvalidator.min.js"></script>
+	<script src="js/libs/ngStorage.min.js"></script>
+	<script src="js/contactForm.js"></script>
+	<script src="js/locationview.js"></script>
 	<script src="js/map.js"></script>
 	<script src="js/customcalendar.js"></script>
 	<script src="js/app.js"></script>
-
-
-
 
 </body>
 </html>
