--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 	<meta charset="UTF-8">
 	<title>GoingApp</title>
 	<link rel="stylesheet" href="css/libs/bootstrap.min.css">
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous"> -->
 	<link rel="stylesheet" href="css/libs/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.0/css/bootstrapValidator.min.css">	
 	<link rel="stylesheet" href="css/libs/font-awesome.min.css">
 	<link rel="stylesheet" href="css/libs/fullcalendar.min.css">
 	<link rel="stylesheet" href="css/stylesheet.css">
+	<link rel="shortcut icon" type="image/png" href="img/varios/favicon.png"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">	
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-UF-QLD_R087xLeUrNL4KeqRJKKOfSXw" type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
@@ -17,16 +17,24 @@
 
 <body ng-controller="HomeViewController">
 
-	<custom-header></custom-header>
-
-	<div class="container" ng-view></div>
-
-	<custom-footer></custom-footer>
+	<header>
+		<custom-header></custom-header>
+	</header>
+	
+	<main>
+		<div class="main-content" ng-view></div>
+	</main>
+	
+	<footer>
+		<custom-footer></custom-footer>
+	</footer>
+	
 	
 
 
 	<script src="js/libs/lodash.js"></script>
 	<script src="js/libs/angular.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-i18n/1.4.6/angular-locale_es-es.js"></script>
 	<script src='js/libs/angular-simple-logger.js'></script>
 	<script src='js/libs/angular-google-maps.min.js'></script>
 	<script src="js/libs/angular-route.min.js"></script>
@@ -40,7 +48,13 @@
 	<script src="js/libs/fullcalendar.min.js"></script>
 	<script src="js/libs/gcal.js"></script>
 	<script src="js/libs/bootstrap.min.js"></script>
-	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script> -->
+	<script type='text/javascript'>
+		$(document).ready(function() {
+			$('.carousel').carousel({
+				interval: 2000
+			})
+		});    
+	</script>
 	<script src="js/libs/ui-bootstrap-tpls-2.0.0.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.4.5/js/bootstrapvalidator.min.js"></script>
 	<script src="js/libs/ngStorage.min.js"></script>
