--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en" ng-app="myApplicationModule">
 <head>
 	<meta charset="UTF-8">
+	<meta name="description" content="Look for your closest sociocultural locations and events">
+	<meta name="author" content="zFlopez">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>GoingApp</title>
+
+	<!-- CSS -->
 	<link rel="stylesheet" href="css/libs/bootstrap.min.css">
 	<link rel="stylesheet" href="css/libs/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.0/css/bootstrapValidator.min.css">	
@@ -10,8 +15,10 @@
 	<link rel="stylesheet" href="css/libs/fullcalendar.min.css">
 	<link rel="stylesheet" href="css/stylesheet.css">
 	<link rel="shortcut icon" type="image/png" href="img/varios/favicon.png"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1">	
+	
+	<!-- GoogleMaps API -->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-UF-QLD_R087xLeUrNL4KeqRJKKOfSXw" type="text/javascript"></script>
+	<!-- Modernizr -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
 </head>
 
@@ -31,7 +38,7 @@
 	
 	
 
-
+	<!-- Scripts -->
 	<script src="js/libs/lodash.js"></script>
 	<script src="js/libs/angular.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-i18n/1.4.6/angular-locale_es-es.js"></script>
@@ -48,16 +55,12 @@
 	<script src="js/libs/fullcalendar.min.js"></script>
 	<script src="js/libs/gcal.js"></script>
 	<script src="js/libs/bootstrap.min.js"></script>
-	<script type='text/javascript'>
-		$(document).ready(function() {
-			$('.carousel').carousel({
-				interval: 2000
-			})
-		});    
-	</script>
+	<script src="js/carousel.js" type='text/javascript'></script>
 	<script src="js/libs/ui-bootstrap-tpls-2.0.0.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.4.5/js/bootstrapvalidator.min.js"></script>
 	<script src="js/libs/ngStorage.min.js"></script>
+	<script src="js/home.js"></script>
+	<script src="js/registration.js"></script>
 	<script src="js/contactForm.js"></script>
 	<script src="js/locationview.js"></script>
 	<script src="js/map.js"></script>
